# advent_of_code

./: .gitignore  README.md
2023/day-01/src/: main.rs
2024/day-01/part-b/: Cargo.toml
2024/day-01/part-b/src/: main.rs
2024/day-02/part-a/src/: main.rs
2024/day-02/part-b/src/: main.rs
2024/day-03/part-a/: Cargo.toml
2024/day-03/part-a/src/: main.rs
2024/day-03/part-b/: Cargo.toml
2024/day-03/part-b/src/: main.rs
2024/part-a/: Cargo.toml
